feat: add csv export to the swagger documentation
